--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <title>test</title>
         <link rel="icon" href="../menu/jigsaw-puzzle.svg" type="image/x-icon" />
         <style>
+            body{
+                margin: 0;
+            }
             :root {
                 --button-background-color: #1890ff;
                 --button-color: #ffffff;
